--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -290,6 +290,10 @@ header .header_logo {
 	background-color: lightgray;
 }
 
+.mobile_image {
+	display: none;
+}
+
 @media only screen and (max-width: 740px) {
 
 	.practice {
@@ -303,6 +307,7 @@ header .header_logo {
 	}
 
 	.highlight {
+		width: 100%;
 		border: 0;
 		display: flex;
 		flex-direction: column;
@@ -314,68 +319,95 @@ header .header_logo {
 		width: 100%;
 		height: auto;
 		padding: 0;
-		margin-left: 1rem;
-		margin-right: 1rem;
 	}
 
-	.highlight img {
-		width: 100%;
+	.desktop_image {
+		display: none
+	}
+
+	.mobile_image {
+		display: block;
+		width: 90%;
 	}
 
 	.guest {
 		background-color: white;
 	}
 
+	.info {
+		padding-left: 1rem;
+		padding-right: 1rem;
+	}
 }
 
-	/* Learning Section - Courses */
+/* Learning Section - Courses */
 
-	.learning {
-		background-color: lightgray;
-	}
+.learning {
+	background-color: lightgray;
+}
 
-		.learning h1 {
-			padding: 2rem 0;
-			text-align: center;
-		}
+.learning h1 {
+	padding: 2rem 0;
+	text-align: center;
+}
 
-	.courses {
-		margin: 0 3.5rem 1rem 3.5rem;
-		display: flex;
-		flex-wrap: wrap;
-		flex-shrink: 1;
-		justify-content: center;
-	}
+.courses {
+	margin: 0 3.5rem 1rem 3.5rem;
+	display: flex;
+	flex-wrap: wrap;
+	flex-shrink: 1;
+	justify-content: center;
+}
 
-	.course {
-		background-color: white;
-		margin-bottom: 2rem;
-		margin-left: 1rem;
-		margin-right: 1rem;
-	}
+.course {
+	background-color: white;
+	margin-bottom: 2rem;
+	margin-left: 1rem;
+	margin-right: 1rem;
+}
 
-		.course a {
-			display: block;
-			margin-top: 0.5rem;
-			margin-bottom: 0.5rem;
-		}
+.course a {
+	display: block;
+	margin-top: 0.5rem;
+	margin-bottom: 0.5rem;
+}
 
-		.course p {
-			margin-bottom: 1.5rem;
-		}
+.course .desktop_link:hover {
+	font-weight: bold;
+	text-decoration: underline;
+}
 
-		.course h4 {
-			margin-top: 1rem;
-		}
+.course p {
+	margin-bottom: 1.5rem;
+}
 
-		.course h4, .course a, .course p {
-			margin-left: 1rem;
-		}
+.course h4 {
+	margin-top: 1rem;
+}
+
+.course h4, .course a, .course p {
+	margin-left: 1rem;
+}
+
+.course .mobile_title {
+	display: none;
+}
 
 @media only screen and (max-width: 740px) {
 
-	.course img, .course p, .course a {
+	.course img, .course p, .course .desktop_link, .course .desktop_title {
 		display: none;
+	}
+
+	.course .mobile_title {
+		display: block;
+		margin: 0;
+		color: black;
+		width: auto;
+	}
+
+	.course a {
+		color: black;
 	}
 
 	.learning {
@@ -399,7 +431,7 @@ header .header_logo {
 
 }
 
-	/* Thesis Section */
+/* Thesis Section */
 
 .thesis {
 	display: flex;
@@ -435,9 +467,9 @@ header .header_logo {
 	width: 100%;
 }
 
-		.exhibit_video video {
-			width: 100%;
-		}
+.exhibit_video video {
+	width: 100%;
+}
 
 @media only screen and (max-width: 740px) {
 
@@ -451,6 +483,11 @@ header .header_logo {
 
 	.thesis .content {
 		width: 100%;
+		margin-bottom: 1.5rem;
+	}
+
+	.exhibit {
+		border-top: 1px solid lightgray;
 	}
 
 }
@@ -487,4 +524,16 @@ footer ul li a {
 
 footer ul li a:hover {
 	font-weight: bold;
+}
+
+@media only screen and (max-width: 740px) {
+
+	footer ul {
+		display: none;
+	}
+
+	footer {
+		border: 0;
+	}
+
 }
